--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (2.33.0) UNRELEASED; urgency=low
+on-syslog (0.1.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -41,5 +41,6 @@ on-syslog (2.33.0) UNRELEASED; urgency=low
   * release 2.31.0
   * release 2.32.0
   * release 2.33.0
+  * release 0.1.0
 
- -- rackhd <rackhd@emc.com>  Fri, 24 Nov 2017 21:02:59 -0500
+ -- rackhd <rackhd@emc.com>  Tue, 28 Nov 2017 21:49:03 +0000
