--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (0.3.0) UNRELEASED; urgency=low
+on-syslog (0.4.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -44,5 +44,6 @@ on-syslog (0.3.0) UNRELEASED; urgency=low
   * release 0.1.0
   * release 0.3.0
   * release 0.3.0
+  * release 0.4.0
 
- -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 15:46:47 +0000
+ -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 16:58:05 +0000
