--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (0.4.0) UNRELEASED; urgency=low
+on-syslog (0.5.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -45,5 +45,6 @@ on-syslog (0.4.0) UNRELEASED; urgency=low
   * release 0.3.0
   * release 0.3.0
   * release 0.4.0
+  * release 0.5.0
 
- -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 16:58:05 +0000
+ -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 17:10:01 +0000
