--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (0.7.0) UNRELEASED; urgency=low
+on-syslog (0.2.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -49,5 +49,6 @@ on-syslog (0.7.0) UNRELEASED; urgency=low
   * release 0.6.0
   * release 0.7.0
   * release 0.7.0
+  * release 0.2.0
 
- -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 17:34:15 +0000
+ -- rackhd <rackhd@emc.com>  Wed, 29 Nov 2017 19:57:31 +0000
