--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (0.3.0) UNRELEASED; urgency=low
+on-syslog (0.4.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -51,5 +51,6 @@ on-syslog (0.3.0) UNRELEASED; urgency=low
   * release 0.7.0
   * release 0.2.0
   * release 0.3.0
+  * release 0.4.0
 
- -- rackhd <rackhd@emc.com>  Thu, 30 Nov 2017 00:58:03 +0000
+ -- rackhd <rackhd@emc.com>  Thu, 30 Nov 2017 04:06:35 +0000
