--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-on-syslog (0.4.0) UNRELEASED; urgency=low
+on-syslog (0.5.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -52,5 +52,6 @@ on-syslog (0.4.0) UNRELEASED; urgency=low
   * release 0.2.0
   * release 0.3.0
   * release 0.4.0
+  * release 0.5.0
 
- -- rackhd <rackhd@emc.com>  Thu, 30 Nov 2017 04:06:35 +0000
+ -- rackhd <rackhd@emc.com>  Thu, 30 Nov 2017 12:07:09 +0000
